<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:alpha="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center"
                android:src="@drawable/landing_countdown_background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_70"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/text_commit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_grey_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_collect" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_reply_grey_without_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_15"
                android:gravity="center"
                android:text="@string/text_comment" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_50"
        android:gravity="bottom|center_horizontal"
        android:text="@string/text_mine_cache"
        android:textSize="@dimen/sp_14"
        app:fontFamily="@font/fzlantingheis_db1_gb_regular" />

    <TextView
        android:id="@+id/tv_watch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="bottom|center_horizontal"
        android:text="@string/text_watch_record"
        android:textSize="@dimen/sp_14"
        app:fontFamily="@font/fzlantingheis_db1_gb_regular" />

    <TextView
        android:id="@+id/tv_advise"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="bottom|center_horizontal"
        android:text="@string/text_feedback"
        android:textSize="@dimen/sp_14"
        app:fontFamily="@font/fzlantingheis_db1_gb_regular" />
</LinearLayout>
