<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="3">

        <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
            android:id="@+id/gsy_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_video_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|bottom"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_video_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:fontFamily="@font/fzlantingheis_regular" />

                <TextView
                    android:id="@+id/txt_video_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/text_time"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/txt_video_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/text_video_desc"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_14"
                    app:fontFamily="@font/fzlantingheis_db1_gb_regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_video_favor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_favorites_without_padding" />

                <TextView
                    android:id="@+id/txt_video_favor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/text_collect"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_video_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:background="@drawable/ic_action_share_without_padding" />

                <TextView
                    android:id="@+id/txt_video_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/text_share"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_video_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:background="@drawable/ic_action_reply_nopadding" />

                <TextView
                    android:id="@+id/txt_video_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/text_comment"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_video_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:background="@drawable/action_download_cut" />

                <TextView
                    android:id="@+id/txt_video_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/text_cache"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>