<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="@dimen/sp_16"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_10"
                android:src="@drawable/icon_search" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rg_root"
        android:layout_below="@id/toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rg_root"
        android:background="@color/colorGray"/>

    <RadioGroup
        android:id="@+id/rg_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_bg_selected"
            android:gravity="center"
            android:text="@string/text_home"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/rb_find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/find_bg_selected"
            android:gravity="center"
            android:text="@string/text_search"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/rb_hot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/hot_bg_selected"
            android:gravity="center"
            android:text="@string/text_hot"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/mine_bg_selected"
            android:gravity="center"
            android:text="@string/text_myself"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_10" />
    </RadioGroup>


</RelativeLayout>